--- a/Scriptdown.iatemplate/Contents/Resources/header.html
+++ b/Scriptdown.iatemplate/Contents/Resources/header.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body class="header">
-<p><span data-title>&nbsp;</span>&nbsp;-&nbsp;<span data-date>&nbsp;</span></p>
+<p><span data-title>&nbsp;</span>&nbsp;-&nbsp;<span data-author>&nbsp;</span></p>
 </body>
 </html>
